Added the capability to pass in multiple include paths to look for referenced files for a pointer statement. Also added the capability to accept URLs as input when passing in a dictionary.